--- a/idris-llvm.cabal
+++ b/idris-llvm.cabal
@@ -4,7 +4,7 @@ License:        BSD3
 License-file:   LICENSE
 Author:         Benjamin Saunders
 Maintainer:	Markus Pfeiffer <mp397@st-andrews.ac.uk>
-Build-Type:	Simple
+Build-Type:	Custom
 Cabal-Version:  >= 1.8
 Extra-source-files:
 		llvm/Makefile
@@ -29,6 +29,22 @@ Executable idris-llvm
 
   other-modules: IRTS.CodegenLLVM
   cpp-options:   -DIDRIS_LLVM
+
+  if os(linux)
+     cpp-options:   -DLINUX
+     build-depends: unix < 2.8
+  if os(freebsd)
+     cpp-options:   -DFREEBSD
+     build-depends: unix < 2.8
+  if os(dragonfly)
+     cpp-options:   -DDRAGONFLY
+     build-depends: unix < 2.8
+  if os(darwin)
+     cpp-options:   -DMACOSX
+     build-depends: unix < 2.8
+  if os(windows)
+     cpp-options:   -DWINDOWS
+     build-depends: Win32 < 2.4
 
   ghc-prof-options: -auto-all -caf-all
   ghc-options:      -threaded -rtsopts -funbox-strict-fields
