--- a/src/rts/Makefile
+++ b/src/rts/Makefile
@@ -1,4 +1,4 @@
-include ../config.mk
+include ../../config.mk
 
 PKG_CONFIG_CFLAGS:=$(shell (pkg-config --version >/dev/null 2>&1) && pkg-config --cflags bdw-gc)
 CFLAGS:=-Wextra -fPIC -Wno-unused-parameter $(PKG_CONFIG_CFLAGS) $(CFLAGS)
