--- a/idris-llvm.cabal
+++ b/idris-llvm.cabal
@@ -3,12 +3,11 @@ Version:        0.0.0.1
 License:        BSD3
 License-file:   LICENSE
 Author:         Benjamin Saunders
-Maintainer:	Markus Pfeiffer <mp397@st-andrews.ac.uk>
-Build-Type:	Simple
+Maintainer:     Markus Pfeiffer <mp397@st-andrews.ac.uk>
+Build-Type:     Simple
 Cabal-Version:  >= 1.8
-Extra-source-files:
-		llvm/Makefile
-		llvm/*.c
+Extra-source-files: llvm/Makefile
+                  , llvm/*.c
 
 Executable idris-llvm
   Main-is:        Main.hs
@@ -27,9 +26,8 @@ Executable idris-llvm
                 , llvm-general == 3.4.4.*
                 , llvm-general-pure == 3.4.4.*
 
-  other-modules: IRTS.CodegenLLVM
+  other-modules: Util, MonadCodeGen, Common, CodeGen, Operators, Constants
   cpp-options:   -DIDRIS_LLVM
 
   ghc-prof-options: -auto-all -caf-all
-  ghc-options:      -threaded -rtsopts -funbox-strict-fields -fwarn-unused-imports
-
+  ghc-options:      -threaded -rtsopts -funbox-strict-fields -Wall
