Make it compile again

--- a/src/rts/Makefile
+++ b/src/rts/Makefile
@@ -1,7 +1,6 @@
 include ../../config.mk
 
-PKG_CONFIG_CFLAGS:=$(shell (pkg-config --version >/dev/null 2>&1) && pkg-config --cflags bdw-gc)
-CFLAGS:=-Wextra -fPIC -Wno-unused-parameter $(PKG_CONFIG_CFLAGS) $(CFLAGS)
+CFLAGS:=-Wextra -fPIC -Wno-unused-parameter $(CFLAGS)
 SOURCES=defs.c
 OBJECTS=$(SOURCES:.c=.o)
 LIB=libidris_rts.a
