--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
+# Build artefacts
 dist
+*.ibc
+*.o
+*.a
+*.so
+*.dll
+*.dylib
+
+# Test artefacts
+test/output
+test/*[0-9][0-9][0-9]/output
+test/*[0-9][0-9][0-9]/*.exe
+test/runtest.exe
+test/runtest
+.tasty-rerun-log
+
+# Haskell build tools
+cabal-dev/
+.cabal-sandbox
+cabal.sandbox.config
+cabal.config
+.stack-work
+.hsenv
+
+# For convenience
+custom.mk
+\#*
+.\#*
+tags
+TAGS
+
+# IDE and editors
+*.swp
+*~
+.DS_Store
+.hpc
+*.orig
+*.tix
+*.dSYM
+.projectile
+.dir-locals.el
+.vscode
+.idea
