Add readStr from markuspfs fork

--- a/src/rts/Makefile
+++ b/src/rts/Makefile
@@ -1,7 +1,7 @@
 include ../../config.mk
 
 CFLAGS:=-Wextra -fPIC -Wno-unused-parameter $(CFLAGS)
-SOURCES=defs.c
+SOURCES=defs.c getline.c
 OBJECTS=$(SOURCES:.c=.o)
 LIB=libidris_rts.a
 
